[package]
name = "epirust"
version = "0.0.1"
license = "Apache-2.0/MIT"
description = "Crate for epidemiological agent-based simulations. It's work in progress and would be uploaded sometime around 3rd week of feb 2020."
authors = ["Jayanta K Kshirsagar <jayanta.kshirsagar@gmail.com>"]
repository = "https://github.com/kjayanta25/epirust"